# rush

./: .gitignore  .mcp.json  AGENTS.TEMPLATE.md  AGENTS.md  ARTIFACT_ISSUE.md  BUILD_ISSUE.md  CLAUDE.md  CONFIGURATION_BEST_PRACTICES.md  DESCRIBE_ISSUE1.md  ENV_SECRETS_REFACTOR.md  EXAMPLE_DEPENDENCY_SETUP.md  FAILING_IMAGES.md  FIX_PLAN.md  HASH_UPDATED.md  IMAGE_TAG.md  IMPROV.md  INGRESS_ISSUE.md  INGRESS_ISSUE2.md  LICENSE  LOCAL_SERVICES_PROPOSAL.md  Makefile  OUTPUT_ARCHITECTURE_ANALYSIS.md  PERFORMANCE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PLAN.md  PLAN_INGRESS_FIX.md  PORTS_ISSUE.md  PORTS_PLAN.md  PROBLEM.md  REACTOR_PLAN.md  README.md  REBUILD_ISSUE.md  REBUILD_ISSUE2.md  REDIS.md  REFACTORING.md  RESTART_PROBLEM.md  ROLLOUT.md  ROLLOUT_ISSUE.md  (+22 more)
products/io.wonop.helloworld/api-server/: BUILD.bazel  Cargo.toml  MODULE.bazel
products/io.wonop.helloworld/demo-bazel/: MODULE.bazel  WORKSPACE
rush/: BUILD_FAILURE_ISSUE.md  CACHE_ISSUE.md  CONTAINER_NAME.md  CONTAINER_NAME2.md  CONTEXT_ISSUE.md  CONTEXT_SPEC.md  Cargo.toml  Cargo.toml.orig  Cargo_old.toml  Cargo_simple.toml  EVERYTHING.md  GETTING_K8S_TO_WORK.md  INCORRECT_DOMAINS.md  MODULAR_STRUCTURE.md  Makefile  NEXT_STEPS.md  PHASE1_COMPLETE.md  PHASE2_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  README.md  REBUILD_ISSUE.md  REBUILD_REPORT.md  REFACTOR_PROPOSAL.md  REGISTRY_CONFIG.md  REMOVE_LEGACY.md  RUSH_CODEBASE_INVENTORY.md  SHUTDOWN_ON_CRITICAL_FAILURE.md  USAGE_EXAMPLES.md  WATCH.md  ci-check.sh  ci-fix.sh  default_13965205611965627146_0_88029.profraw  default_13965205611965627146_0_88033.profraw  default_14218497785774503300_0_88238.profraw  default_14575654857972893498_0_88029.profraw  default_14575654857972893498_0_88033.profraw  default_14843928166045285251_0_88023.profraw  default_14843928166045285251_0_88024.profraw  default_14843928166045285251_0_88025.profraw  (+119 more)
rush/.cargo/: config.toml
rush/crates/rush-build/: Cargo.toml
rush/crates/rush-cli/: Cargo.toml
rush/crates/rush-config/: Cargo.toml
rush/crates/rush-container/: Cargo.toml
rush/crates/rush-core/: Cargo.toml
rush/crates/rush-docker/: Cargo.toml
rush/crates/rush-helper/: Cargo.toml  README.md
rush/crates/rush-k8s/: Cargo.toml
rush/crates/rush-local-services/: Cargo.toml
rush/crates/rush-mcp/: Cargo.toml
rush/crates/rush-output/: Cargo.toml
rush/crates/rush-security/: Cargo.toml
rush/crates/rush-toolchain/: Cargo.toml
rush/crates/rush-utils/: Cargo.toml
rush/docs/: BUILD_CACHING.md  WATCH_CONDITIONS.md  local_services.md
rush/examples/local-services-test/: README.md  stack.spec.yaml
rush/examples/localstack-test/: README.md  stack.spec.yaml
rush/examples/observability-stack/: stack.spec.yaml
rush/issues/: add-integration-tests.md  comprehensive-cleanup-phase2.md  comprehensive-code-cleanup.md  simplify-and-cleanup-code.md
rush/old_src/builder/: spec.rs
rush/old_src/cluster/: infrastructure.rs
rush/old_src/vault/: secrets_definitions.rs
rush/scripts/: fix-ci.sh  run-ci.sh
rush/src/: constants.rs  dotenv_utils.rs  error.rs  git.rs  gitignore.rs  lib.rs  main.rs  public_env_defs.rs  shutdown.rs  utils.rs
rush/src/builder/: artefact.rs  build_context.rs  build_script.rs  build_type.rs  config.rs  spec.rs  templates.rs  variables.rs
rush/src/cli/: args.rs  context.rs  context_builder.rs  execute.rs  init.rs  mod.rs
rush/src/cluster/: k8_encoder.rs  k8s.rs  mod.rs
rush/src/container/: container_reactor.rs  container_reactor.rs.orig  docker.rs  image_builder.rs  mod.rs  network.rs  reactor.rs  service.rs  service_spec.rs  status.rs
rush/src/core/: dotenv.rs  mod.rs  types.rs
rush/src/k8s/: context.rs  deployment.rs  encoder.rs  infrastructure.rs  manifests.rs  validation.rs
rush/src/output/: buffered.rs  director.rs  example.rs  factory.rs  file.rs  mod.rs  shared.rs  source.rs  stream.rs
rush/src/security/: env_defs.rs
rush/src/toolchain/: context.rs  mod.rs
rush/src/utils/: command_runner.rs  directory.rs  docker_cross.rs  fs.rs  mod.rs  path.rs  path_matcher.rs  template.rs  version.rs
rush/src/vault/: dotenv_vault.rs  file_vault.rs  mod.rs  one_password.rs  secrets_adapter.rs  secrets_definitions.rs  vault_trait.rs
rush/src_new/cli/: mod.rs
rush/src_new/container/: docker.rs  reactor.rs  status.rs
rush/src_new/core/: dotenv.rs
rush/src_new/k8s/: context.rs  infrastructure.rs  mod.rs
rush/src_new/security/: env_defs.rs  mod.rs
rush/src_new/toolchain/: platform.rs
rush/src_new/utils/: directory.rs  git.rs  path.rs  process.rs  template.rs
rush/src_old/: main.rs
rush/src_old/cli/: args.rs
rush/src_old/cluster/: infrastructure.rs
rush/src_old/container/: container_reactor.rs  docker.rs  mod.rs
rush/src_old/core/: mod.rs
rush/src_old/utils/: git.rs
rush/src_old/vault/: dotenv_vault.rs  secrets_provider.rs  vault_adapter.rs
rush/src_reference/: lib.rs  main.rs  public_env_defs.rs
rush/src_reference/builder/: artefact.rs  spec.rs
rush/src_reference/cluster/: k8s.rs  validation.rs
rush/src_reference/container/: container_reactor.rs
rush/src_reference/toolchain/: platform.rs
rush/tests/: TESTING.md  basic_test.rs  build_test.rs  docker_integration_test.rs  docker_test.rs  file_watch_integration_test.rs  improved_coverage_tests.rs  main.rs  minimal_test.rs  minimal_vault_tests.rs  mod.rs  resilient_coverage_tests.rs  run_integration_tests.rs  simple_test.rs  test_verification.rs  vault_integration_test.rs
rush/tests/common/: mod.rs
rush/tests/container/: docker_test.rs  mod.rs
rush/tests/integration/: basic_test.rs  common.rs  dotenv_integration_test.rs  file_watch_test.rs  mod.rs
rush/tests/test_utils/: mod.rs
rush/tests/tests/: test_verification.rs
rush/tests/unit/: cluster_validation_tests.rs  container_test.rs  dotenv_utils_test.rs  dotenv_utils_tests.rs  git_test.rs  git_tests.rs  k8_encoder_tests.rs  mod.rs  mod.rs.bak  path_matcher_test.rs  public_env_defs_tests.rs  secrets_adapter_test.rs  toolchain_test.rs  toolchain_tests.rs  utils_test.rs  utils_tests.rs  vault_test.rs
rush/xtask/: Cargo.toml
(+642 files in other folders)
