[workspace]
members = [
    "crates/rush-core",
    "crates/rush-utils",
    "crates/rush-config",
    "crates/rush-toolchain",
    "crates/rush-security",
    "crates/rush-build",
    "crates/rush-output",
    "crates/rush-container",
    "crates/rush-k8s",
    "crates/rush-helper",
    "crates/rush-local-services",
    "crates/rush-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Troels F. Rønnow <wonop@wonop.com>"]
license = "MIT"
repository = "https://github.com/wonop-io/rush"
homepage = "https://github.com/wonop-io/rush"

[workspace.dependencies]
# Internal crates
rush-core = { path = "crates/rush-core" }
rush-utils = { path = "crates/rush-utils" }
rush-config = { path = "crates/rush-config" }
rush-toolchain = { path = "crates/rush-toolchain" }
rush-security = { path = "crates/rush-security" }
rush-build = { path = "crates/rush-build" }
rush-output = { path = "crates/rush-output" }
rush-container = { path = "crates/rush-container" }
rush-k8s = { path = "crates/rush-k8s" }
rush-helper = { path = "crates/rush-helper" }
rush-local-services = { path = "crates/rush-local-services" }

# External dependencies
anyhow = "1.0"
async-trait = "0.1.81"
base64 = "0.22.1"
bollard = "0.15"
chrono = "0.4.38"
clap = "4.5.3"
colored = "2.1.0"
console = "0.15"
console-subscriber = "0.4.0"
dialoguer = "0.11"
dirs = "6.0.0"
directories = "5.0"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
env_logger = "0.11.5"
futures = "0.3.30"
glob = "0.3.1"
handlebars = "4.5"
hex = "0.4.3"
indicatif = "0.17"
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
lazy_static = "1.4.0"
log = "0.4.22"
notify = "6.1.1"
openssl = "0.10.66"
rand = "0.8.5"
regex = "1.10"
reqwest = { version = "0.12.7", features = ["json"] }
rpassword = "7.3.1"
semver = "1.0.23"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
sha2 = "0.10.8"
slug = "0.1.5"
ssh-key = { version = "0.6.7", features = [
    "alloc",
    "ed25519",
    "dsa",
    "rsa",
    "encryption",
    "getrandom",
    "crypto",
    "p256",
    "p384",
    "p521",
    "serde",
    "tdes",
] }
tempfile = "3.8"
tera = "1.19.1"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
toml = "0.8"
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.4"
which = "6.0"

# Dev dependencies
ctor = "0.2.6"
serial_test = "3.2.0"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
