[workspace]
members = [
    "crates/rush-build",
    "crates/rush-cli",
    "crates/rush-config",
    "crates/rush-container",
    "crates/rush-core",
    "crates/rush-helper",
    "crates/rush-k8s",
    "crates/rush-local-services",
    "crates/rush-output",
    "crates/rush-security",
    "crates/rush-toolchain",
    "crates/rush-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Troels F. Rønnow <wonop@wonop.com>"]
license = "MIT"
repository = "https://github.com/wonop-io/rush"
homepage = "https://github.com/wonop-io/rush"

[workspace.dependencies]

# External dependencies
anyhow = "1.0"
async-trait = "0.1.81"
atty = "0.2"
base64 = "0.22.1"
bollard = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5.3"
colored = "2.1.0"
console = "0.15"
console-subscriber = "0.4.0"
crossterm = "0.28"

# Dev dependencies
ctor = "0.2.6"
dialoguer = "0.11"
directories = "5.0"
dirs = "6.0.0"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
env_logger = "0.11.5"
futures = "0.3.30"
glob = "0.3.1"
handlebars = "4.5"
hex = "0.4.3"
indicatif = "0.17"
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
lazy_static = "1.4.0"
log = "0.4.22"
notify = "6.1.1"
once_cell = "1.19"
openssl = "0.10.66"
rand = "0.8.5"
regex = "1.10"
reqwest = { version = "0.12.7", features = ["json"] }
rpassword = "7.3.1"
rush-build = { path = "crates/rush-build" }
rush-config = { path = "crates/rush-config" }
rush-container = { path = "crates/rush-container" }
# Internal crates
rush-core = { path = "crates/rush-core" }
rush-helper = { path = "crates/rush-helper" }
rush-k8s = { path = "crates/rush-k8s" }
rush-local-services = { path = "crates/rush-local-services" }
rush-output = { path = "crates/rush-output" }
rush-security = { path = "crates/rush-security" }
rush-toolchain = { path = "crates/rush-toolchain" }
rush-utils = { path = "crates/rush-utils" }
semver = "1.0.23"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
serial_test = "3.2.0"
sha2 = "0.10.8"
slug = "0.1.5"
ssh-key = { version = "0.6.7", features = [
    "alloc",
    "ed25519",
    "dsa",
    "rsa",
    "encryption",
    "getrandom",
    "crypto",
    "p256",
    "p384",
    "p521",
    "serde",
    "tdes",
] }
tempfile = "3.8"
tera = "1.19.1"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-test = "0.4"
tokio-util = "0.7.10"
toml = "0.8"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
walkdir = "2.4"
which = "6.0"

[profile.release]
opt-level = 3
lto = true
strip = true
