# This Cargo.toml is for IDE support only.
# The actual build is done by Bazel.

[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
description = "Rust API Server built with Bazel for Rush demo"

[[bin]]
name = "api_server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
