###############################################################################
# Bazel module configuration for demo-bazel
###############################################################################

module(
    name = "demo_bazel",
    version = "0.1.0",
)

# Python rules
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)
