[package]
name = "rush-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rush-core = { workspace = true }
rush-config = { workspace = true }
rush-toolchain = { workspace = true }
rush-utils = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
slug = { workspace = true }
log = { workspace = true }
handlebars = { workspace = true }
tera = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
