[package]
name = "rush-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rush Deployment: A tool to bring the development experience as close to the production experience as possible."
readme = "../../README.md"
keywords = ["yew", "axum", "docker", "kubernetes", "cross-compilation"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[lib]
name = "rush_cli"
path = "src/lib.rs"

[[bin]]
name = "rush"
path = "src/main.rs"

[dependencies]

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
console-subscriber = { workspace = true }
ctrlc = "3.4"
directories = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
rush-build = { workspace = true }
rush-config = { workspace = true }
rush-container = { workspace = true }
rush-core = { workspace = true }
rush-docker = { workspace = true }
rush-helper = { workspace = true }
rush-k8s = { workspace = true }
rush-local-services = { workspace = true }
rush-mcp = { workspace = true }
rush-output = { workspace = true }
rush-security = { workspace = true }
rush-toolchain = { workspace = true }
rush-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-flame = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "chrono"] }
uuid = { workspace = true }

[features]
default = []
profiling = ["tracing-flame"]

[dev-dependencies]
ctor = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
