[package]
name = "rush-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rush-core = { workspace = true }
rush-utils = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
slug = { workspace = true }
tera = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
