[package]
name = "rush-container"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
hex.workspace = true
ignore = "0.4"
log = { workspace = true }
md5 = "0.7"
notify = { workspace = true }
rush-build = { workspace = true }
rush-config = { workspace = true }
rush-core = { workspace = true }
rush-docker = { workspace = true }
rush-k8s = { workspace = true }
rush-local-services = { workspace = true }
rush-output = { workspace = true }
rush-security = { workspace = true }
rush-toolchain = { workspace = true }
rush-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2.workspace = true
tempfile = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
walkdir.workspace = true

[dev-dependencies]
mockall = { workspace = true }
serial_test = { workspace = true }
tokio-test = { workspace = true }
