[package]
name = "rush-docker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rush-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }