[package]
name = "rush-docker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
rush-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
