[package]
name = "rush-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
os_info = "3.7"
