[package]
name = "rush-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rush-core = { path = "../rush-core" }
rush-output = { path = "../rush-output" }
rush-container = { path = "../rush-container" }
rush-config = { path = "../rush-config" }
rush-security = { path = "../rush-security" }

# MCP and async
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP/WebSocket for future network transport
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }

# UUID for session management
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = ["stdio"]
stdio = []
network = ["axum", "tower"]

[dev-dependencies]
tokio-test = "0.4"