[package]
name = "rush-mcp"
version = "0.1.0"
edition = "2021"

[features]
default = ["stdio"]
stdio = []
network = ["axum", "tower"]

[dependencies]

# Error handling
anyhow = { workspace = true }
async-trait = { workspace = true }

# HTTP/WebSocket for future network transport
axum = { workspace = true, optional = true }

# Logging
log = { workspace = true }
rush-config = { workspace = true }
rush-container = { workspace = true }
rush-core = { workspace = true }
rush-output = { workspace = true }
rush-security = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# MCP and async
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, optional = true }

# UUID for session management
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
