[package]
name = "rush-output"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rush-config = { workspace = true }
rush-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
atty = "0.2"
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
crossterm = "0.28"
indicatif = { workspace = true }
log = { workspace = true }
regex = "1.11"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.12.0"
tokio-test = "0.4"
