[package]
name = "rush-output"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
atty = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
crossterm = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
rush-config = { workspace = true }
rush-core = { workspace = true }
scopeguard = "1.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
