[package]
name = "rush-output"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
atty = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
rush-config = { workspace = true }
rush-core = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
