[package]
name = "rush-security"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rush-core = { workspace = true }
rush-config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
serde_yaml = { workspace = true }
rpassword = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
