[package]
name = "rush-toolchain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rush-core = { workspace = true }
rush-utils = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
