[package]
name = "rush-toolchain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex = { workspace = true }
log = { workspace = true }
rush-utils = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
