[package]
name = "rush-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rush-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

[dev-dependencies]
serial_test = "3.2.0"
tempfile = { workspace = true }